Moved header to separate component.  Not completed yet!

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 
 <div class="container-fluid text-center">
 
-<h1 class="w-100 text-white" onclick="location.href='#';">PhonePicker</h1>
+<h1 class="w-50 text-white text-left" onclick="location.href='#';">PhonePicker</h1>
 
 </div>
 
