added more styling

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
 
 <div class="container-fluid main-overlay">
 
-	<div class="col-md-8 offset-md-2 overlay-wrap">
+	<div class="col-lg-10 col-xl-8 offset-lg-1 offset-xl-2 overlay-wrap">
 		<div class="col-12 overlay-block">
 			<h2 class="col-12 text-white text-center text-uppercase">how it works</h2>
 			<div class="col-12 circle-wrapper d-flex justify-content-center align-items-center">
