Navbar and devices layout styling

--- a/src/index.html
+++ b/src/index.html
@@ -19,22 +19,11 @@
 </head>
 <body>
 
-
-<nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top" id="navigation" role="navigation">
-
-<div class="container-fluid text-center">
-
-<h1 class="w-50 text-white text-left" onclick="location.href='#';">PhonePicker</h1>
-
-</div>
-
-</nav>
-
-<main class="site-content" role="main">
+<main class="site-content d-inline-block d-sm-flex" role="main">
 
 <!-- ----------- center description block ----------- -->
 
-<div class="container-fluid main-overlay">
+<div class="d-none d-sm-block container-fluid main-overlay">
 
 	<div class="col-lg-10 col-xl-8 offset-lg-1 offset-xl-2 overlay-wrap">
 		<div class="col-12 overlay-block">
